partman-crypto (84) UNRELEASED; urgency=medium

  * Make default crypto parameters preseedable (Closes: #785732). Thanks
    to Jérôme Vizcaino for the report and the patch!

 -- Cyril Brulebois <kibi@debian.org>  Fri, 10 Jul 2015 02:15:35 +0200

partman-crypto (83) unstable; urgency=medium

  [ Updated translations ]
  * Portuguese (Brazil) (pt_BR.po) by Adriano Rafael Gomes
  * Turkish (tr.po) by Mert Dirik

 -- Christian Perrier <bubulle@debian.org>  Fri, 03 Jul 2015 06:13:32 +0200

partman-crypto (82) unstable; urgency=medium

  [ Updated translations ]
  * Portuguese (Brazil) (pt_BR.po) by Adriano Rafael Gomes

 -- Christian Perrier <bubulle@debian.org>  Tue, 19 May 2015 19:23:03 +0200

partman-crypto (81) unstable; urgency=low

  [ Updated translations ]
  * Kazakh (kk.po) by Baurzhan Muftakhidinov

 -- Christian Perrier <bubulle@debian.org>  Wed, 15 Apr 2015 08:58:17 +0200

partman-crypto (80) unstable; urgency=low

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach

 -- Christian Perrier <bubulle@debian.org>  Sun, 05 Apr 2015 14:16:24 +0200

partman-crypto (79) unstable; urgency=low

  [ Updated translations ]
  * Romanian (ro.po) by Bradut Boghita

 -- Christian Perrier <bubulle@debian.org>  Thu, 26 Mar 2015 07:51:46 +0100

partman-crypto (78) unstable; urgency=low

  [ Updated translations ]
  * Esperanto (eo.po) by Felipe Castro
  * Spanish (es.po) by Javier Fernández-Sanguino Peña

 -- Christian Perrier <bubulle@debian.org>  Mon, 08 Dec 2014 06:15:18 +0100

partman-crypto (77) unstable; urgency=medium

  * Cherry-pick bzr r693 from Ubuntu (partman-crypto/40ubuntu2), thanks
    to Colin Watson:
    - Allow preseeding the first passphrase prompt (LP: #546405).
      (Preseeding passphrases for multiple different physical volumes is
      a whole different kettle of fish ...)
  * Cherry-pick bzr r695 from Ubuntu (partman-crypto/40ubuntu3), thanks
    to Colin Watson:
    - Allow preseeding partman-crypto/weak_passphrase too (LP: #546405).