@@ -2,6 +2,8 @@ partman-crypto (84) UNRELEASED; urgency=medium
 
   * Make default crypto parameters preseedable (Closes: #785732). Thanks
     to Jérôme Vizcaino for the report and the patch!
+  * Honor specified keyhash algorithm for LUKS (Closes: #785733). Thanks
+    to Jérôme Vizcaino for the report and the patch! (bis)
 
  -- Cyril Brulebois <kibi@debian.org>  Fri, 10 Jul 2015 02:15:35 +0200
 
